--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Generate build files
         uses: thatisuday/go-cross-build@v1
         with:
-            platforms: 'linux/amd64, darwin/amd64, windows/amd64'
+            platforms: 'linux/amd64, darwin/amd64, windows/amd64, linux/arm, linux/arm64'
             name: 'rss-to-podcast'
             compress: 'false'
             dest: 'dist'
