--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
             platforms: 'linux/amd64, darwin/amd64, windows/amd64, linux/arm, linux/arm64'
             name: 'rss-to-podcast'
             compress: 'false'
+            package: ""
             dest: 'dist'
       - name: Upload build artifacts
         uses: actions/upload-artifact@main
