--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,17 +12,35 @@ on:
 jobs:
 
   build:
+    name: Generate cross-platform builds
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go build -v ./...
+    - uses: goreleaser/goreleaser-action@v4
+      with:
+        # either 'goreleaser' (default) or 'goreleaser-pro':
+        distribution: goreleaser
+        version: latest
+        args: release --clean
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Test
-      run: go test -v ./...
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@main
+      with:
+        path: ./dist/*
+
+    - name: Upload as release
+      id: release_upload
+      uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        files: ./dist/*
