--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,6 @@ name: Generate release-artifacts
 # on events
 on:
   workflow_dispatch:
-  push:
-  release:
-    types:
-        - created
 
 # workflow tasks
 jobs:
@@ -33,7 +29,7 @@ jobs:
         run: |
           echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
       - name: Upload as release
-        id: releas_upload
+        id: release_upload
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
