--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,13 +1,14 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Release
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    # run only against tags
+    tags:
+      - '*'
 
 jobs:
 
@@ -20,7 +21,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: 1.19
+        go-version: stable
+    - run: git fetch --force --tags
 
     - uses: goreleaser/goreleaser-action@v4
       with:
